--- a/client/containers/container-instance/index.css
+++ b/client/containers/container-instance/index.css
@@ -1,17 +1,22 @@
 
-.ContainerInstance {}
+.ContainerInstance {
+}
 
 .ContainerInstanceTabs {
+
   margin-top: 40px;
 }
 
 .ContainerInstanceTabs-navigation {
 }
+
 .ContainerInstanceTabs-navigation ul {
+
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 .ContainerInstanceTabs-navigation li {
   display: inline-block;
   padding-right: 10px;
@@ -27,6 +32,7 @@
 
 /* hack */
 .ContainerInstanceTabs-navigation a > div {
+
   display: inline;
   border-radius: 5px;
   border-bottom-left-radius: 0;
