--- a/client/components/container-instance-list/index.css
+++ b/client/components/container-instance-list/index.css
@@ -25,7 +25,7 @@
   margin: 5px;
 }
 
-.ContainerListItem > div  {
+.ContainerListItem > a  {
   height: 100%;
   width: 100%;
   display: block;
@@ -42,6 +42,11 @@
   box-shadow: 0 1px 0 rgba(0,0,0,.05);
   box-sizing: border-box;
   transform: translateZ(0);
+}
+
+.ContainerListItem a:focus,
+.ContainerListItem a:hover {
+  border-color: #3cc76a;
 }
 
 .ContainerListItem h3 {
